objects/AnonCartSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Anonymous_Account_Name__c</fullName>
        <label>Anonymous Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <label>Price List Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetupOwnerId__c</fullName>
        <label>SetupOwnerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AnonCartSettings</label>
</CustomObject>